--- a/CSS/Components/main-title.css
+++ b/CSS/Components/main-title.css
@@ -1,17 +1,20 @@
-.title {
+.main-title {
     font-family: "Press Start 2P", sans-serif ;
     font-size: 40px;
     color:#EEF315;
     text-shadow: 4px 4px 0 #000;
 }
 
-.title.-second{
+.main-title.-second{
     text-align: center;
     color: #fff;  
     text-shadow: none;
 }
 
-.title.-html{
-    margin-left: 235px;
-    margin-top: 62px;
+.main-title.-html{
+    display: flex;
+    color: #fff;
+    font-size: 25px;
+    margin-top: 10px;
+    text-shadow: none;
 }
