--- a/CSS/Components/button-action.css
+++ b/CSS/Components/button-action.css
@@ -1,4 +1,4 @@
-.button {
+.button-action {
     display: inline-block; /* em toda tag <a>*/ /*É preciso mudar para inline-block. Assim, a largura e altura podem ser editadas */
     background-color: #F25A70;
     line-height: 60px; /*Sempre mesmo tamanho da linha. Serve para apenas 1 linha*/
@@ -12,7 +12,7 @@
     font-weight: 500; /*weight= peso*/
 }
 /* 'hover' implementa interação de cursor do mouse*/
-.buton:hover { /*é uma pseudoclasse*/
+.buton-action:hover { /*é uma pseudoclasse*/
     transform: scale(1.08);
     opacity: 0.5;
 }
