--- a/CSS/Components/initial-page.css
+++ b/CSS/Components/initial-page.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-.initial-page .wrapper{
+.initial-page .main-wrapper{
     display: flex;
     flex-direction: column; 
     width: 630px;
@@ -15,7 +15,7 @@
     padding-top: 115px;
 }
 
-.initial-page .box{
+.initial-page .box-title{
     margin-bottom: 40px;
 }
 
@@ -32,7 +32,7 @@
     height: 724px;
 }
 
-.initial-page .title{
+.initial-page .main-title{
     margin-bottom: 60px;
 }
 
