--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -1,4 +1,4 @@
-body, .title, .subtitle {
+body, .main-title, .subtitle-box {
     margin: 0; 
 }
 
@@ -6,7 +6,7 @@ body{
     font-family: "Fira Code", Arial, Helvetica, sans-serif;
 }
 
-.button {
+.button-action {
     border: none;
     font-family: inherit;
 }
